apps/services/homarr/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homarr
  labels:
    name: homarr
