apps/services/homarr/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homarr
  namespace: homarr
spec:
  type: ClusterIP
  selector:
    app: homarr
  ports:
  - port: 7575
    targetPort: http
    name: http
