apps/services/homarr/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homarr
  namespace: homarr
  annotations:
    cert-manager.io/cluster-issuer: cert-issuer
spec:
  rules:
  - host: dash.wrenspace.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homarr
            port:
              name: http
  tls:
  - hosts:
    - dash.wrenspace.dev
    secretName: homarr-tls
